--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(readDataVersions)
 export(readLogFile)
 export(readProgramVersions)
 export(readSampleMetadataFile)
+export(readYAML)
 export(sampleMetadata)
 export(sampleYAML)
 export(sampleYAMLMetadata)
@@ -35,7 +36,9 @@ exportMethods(sampleYAMLMetrics)
 import(methods)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(basejump,camel)
+importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,readFileByExtension)
+importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
 importFrom(basejump,revcomp)
 importFrom(dplyr,arrange)
