Fix NAMESPACE for unit tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,9 +3,12 @@
 export("%>%")
 export("bcbio<-")
 export("interestingGroups<-")
+export(DataFrame)
 export(bcbio)
 export(flatFiles)
+export(glimpse)
 export(interestingGroups)
+export(metadata)
 export(metrics)
 export(plotDot)
 export(plotGene)
@@ -34,6 +37,8 @@ exportMethods(sampleYAML)
 exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
 import(methods)
+importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(basejump,camel)
 importFrom(basejump,localOrRemoteFile)
@@ -64,6 +69,7 @@ importFrom(rlang,syms)
 importFrom(scales,percent)
 importFrom(stringr,str_pad)
 importFrom(tibble,column_to_rownames)
+importFrom(tibble,glimpse)
 importFrom(tibble,has_rownames)
 importFrom(tidyr,expand)
 importFrom(utils,globalVariables)
