Reexport basejump functions used in bcbioRNASeq

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,13 @@ export("%>%")
 export("bcbio<-")
 export("interestingGroups<-")
 export(DataFrame)
+export(annotable)
 export(bcbio)
+export(camel)
+export(checkInterestingGroups)
+export(fixNA)
 export(flatFiles)
+export(gene2symbol)
 export(glimpse)
 export(interestingGroups)
 export(metadata)
@@ -26,7 +31,9 @@ export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
 export(selectSamples)
+export(snake)
 export(tpm)
+export(uniteInterestingGroups)
 exportMethods(prepareSummarizedExperiment)
 exportMethods(prepareTemplate)
 exportMethods(readDataVersions)
@@ -40,12 +47,16 @@ import(methods)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(basejump,annotable)
 importFrom(basejump,camel)
+importFrom(basejump,fixNA)
+importFrom(basejump,gene2symbol)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
 importFrom(basejump,revcomp)
+importFrom(basejump,snake)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
@@ -72,5 +83,6 @@ importFrom(tibble,column_to_rownames)
 importFrom(tibble,glimpse)
 importFrom(tibble,has_rownames)
 importFrom(tidyr,expand)
+importFrom(tidyr,unite)
 importFrom(utils,globalVariables)
 importFrom(utils,head)
