--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,27 +4,35 @@ export("%>%")
 export("bcbio<-")
 export("interestingGroups<-")
 export(DataFrame)
+export(aggregateReplicates)
 export(annotable)
 export(bcbio)
 export(camel)
 export(checkGene2symbol)
 export(checkInterestingGroups)
 export(detectOrganism)
+export(dynamicPlotlist)
 export(fixNA)
 export(flatFiles)
 export(gene2symbol)
+export(gene2symbolFromGTF)
 export(glimpse)
 export(interestingGroups)
+export(mdHeader)
+export(mdList)
 export(metadata)
 export(metrics)
+export(midnightTheme)
 export(plotDot)
 export(plotGene)
 export(plotHeatmap)
 export(plotQC)
+export(plotQuantileHeatmap)
 export(plotViolin)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
 export(readDataVersions)
+export(readGTF)
 export(readLogFile)
 export(readProgramVersions)
 export(readSampleMetadataFile)
@@ -37,6 +45,8 @@ export(sanitizeAnnotable)
 export(selectSamples)
 export(snake)
 export(tpm)
+export(tx2gene)
+export(tx2geneFromGTF)
 export(uniteInterestingGroups)
 exportMethods(prepareSummarizedExperiment)
 exportMethods(prepareTemplate)
@@ -51,20 +61,30 @@ import(methods)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(basejump,aggregateReplicates)
 importFrom(basejump,annotable)
 importFrom(basejump,camel)
 importFrom(basejump,checkGene2symbol)
 importFrom(basejump,detectOrganism)
+importFrom(basejump,dynamicPlotlist)
 importFrom(basejump,fixNA)
 importFrom(basejump,gene2symbol)
+importFrom(basejump,gene2symbolFromGTF)
 importFrom(basejump,localOrRemoteFile)
+importFrom(basejump,mdHeader)
+importFrom(basejump,mdList)
+importFrom(basejump,midnightTheme)
 importFrom(basejump,plotHeatmap)
+importFrom(basejump,plotQuantileHeatmap)
 importFrom(basejump,readFileByExtension)
+importFrom(basejump,readGTF)
 importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
 importFrom(basejump,revcomp)
 importFrom(basejump,sanitizeAnnotable)
 importFrom(basejump,snake)
+importFrom(basejump,tx2gene)
+importFrom(basejump,tx2geneFromGTF)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
