--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(aggregateReplicates)
 export(annotable)
 export(bcbio)
 export(camel)
+export(checkAnnotable)
 export(checkGene2symbol)
 export(checkInterestingGroups)
 export(detectOrganism)
@@ -64,6 +65,7 @@ importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(basejump,aggregateReplicates)
 importFrom(basejump,annotable)
 importFrom(basejump,camel)
+importFrom(basejump,checkAnnotable)
 importFrom(basejump,checkGene2symbol)
 importFrom(basejump,detectOrganism)
 importFrom(basejump,dynamicPlotlist)
