--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(plotViolin)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
 export(readDataVersions)
+export(readFileByExtension)
 export(readGTF)
 export(readLogFile)
 export(readProgramVersions)
