Reexport load and save utilities

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export("interestingGroups<-")
 export(DataFrame)
 export(aggregateReplicates)
 export(annotable)
+export(assignAndSaveData)
 export(bcbio)
 export(camel)
 export(checkAnnotable)
@@ -19,6 +20,8 @@ export(gene2symbol)
 export(gene2symbolFromGTF)
 export(glimpse)
 export(interestingGroups)
+export(loadData)
+export(loadRemoteData)
 export(mdHeader)
 export(mdList)
 export(metadata)
@@ -44,6 +47,7 @@ export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
 export(sanitizeAnnotable)
+export(saveData)
 export(selectSamples)
 export(snake)
 export(tpm)
@@ -65,6 +69,7 @@ importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(basejump,aggregateReplicates)
 importFrom(basejump,annotable)
+importFrom(basejump,assignAndSaveData)
 importFrom(basejump,camel)
 importFrom(basejump,checkAnnotable)
 importFrom(basejump,checkGene2symbol)
@@ -73,6 +78,8 @@ importFrom(basejump,dynamicPlotlist)
 importFrom(basejump,fixNA)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,gene2symbolFromGTF)
+importFrom(basejump,loadData)
+importFrom(basejump,loadRemoteData)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,mdHeader)
 importFrom(basejump,mdList)
@@ -85,6 +92,7 @@ importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
 importFrom(basejump,revcomp)
 importFrom(basejump,sanitizeAnnotable)
+importFrom(basejump,saveData)
 importFrom(basejump,snake)
 importFrom(basejump,tx2gene)
 importFrom(basejump,tx2geneFromGTF)
