--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: bcbioBase
-Title: Single-Cell RNA-Seq Utilities
+Title: bcbio Base Functions
 Description: Base functions and generics for bcbio R packages.
 Version: 0.0.2
 Authors@R: as.person(c(
