--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,3 +4,5 @@ template:
 authors:
   Michael Steinbaugh:
     href: http://steinbaugh.com
+  Harvard Chan Bioinformatics Core:
+    href: http://bioinformatics.sph.harvard.edu
