Switch from `revcomp()` to `Biostrings::reverseComplement()` method for index barcode matching

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ exportMethods(sampleYAML)
 exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
 import(methods)
+importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
@@ -90,7 +91,6 @@ importFrom(basejump,readFileByExtension)
 importFrom(basejump,readGTF)
 importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
-importFrom(basejump,revcomp)
 importFrom(basejump,sanitizeAnnotable)
 importFrom(basejump,saveData)
 importFrom(basejump,snake)
