--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(gene2symbolFromGTF)
 export(glimpse)
 export(interestingGroups)
 export(loadData)
+export(loadDataAsName)
 export(loadRemoteData)
 export(mdHeader)
 export(mdList)
@@ -80,6 +81,7 @@ importFrom(basejump,fixNA)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,gene2symbolFromGTF)
 importFrom(basejump,loadData)
+importFrom(basejump,loadDataAsName)
 importFrom(basejump,loadRemoteData)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,mdHeader)
