--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ export(tpm)
 export(tx2gene)
 export(tx2geneFromGTF)
 export(uniteInterestingGroups)
+export(writeCounts)
 exportMethods(prepareSummarizedExperiment)
 exportMethods(prepareTemplate)
 exportMethods(readDataVersions)
@@ -98,6 +99,7 @@ importFrom(basejump,saveData)
 importFrom(basejump,snake)
 importFrom(basejump,tx2gene)
 importFrom(basejump,tx2geneFromGTF)
+importFrom(basejump,writeCounts)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
