--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export("bcbio<-")
 export("interestingGroups<-")
 export(DataFrame)
+export(abort)
 export(aggregateReplicates)
 export(annotable)
 export(assignAndSaveData)
@@ -19,6 +20,7 @@ export(flatFiles)
 export(gene2symbol)
 export(gene2symbolFromGTF)
 export(glimpse)
+export(inform)
 export(interestingGroups)
 export(loadData)
 export(loadDataAsName)
@@ -55,6 +57,7 @@ export(tpm)
 export(tx2gene)
 export(tx2geneFromGTF)
 export(uniteInterestingGroups)
+export(warn)
 export(writeCounts)
 exportMethods(prepareSummarizedExperiment)
 exportMethods(prepareTemplate)
@@ -118,8 +121,11 @@ importFrom(readr,read_lines)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,.data)
+importFrom(rlang,abort)
+importFrom(rlang,inform)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(rlang,warn)
 importFrom(scales,percent)
 importFrom(stringr,str_pad)
 importFrom(tibble,column_to_rownames)
