Reexport `dplyr::pull()`, for working examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(plotQuantileHeatmap)
 export(plotViolin)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
+export(pull)
 export(readDataVersions)
 export(readFileByExtension)
 export(readGTF)
@@ -111,6 +112,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
