--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Suggests:
     rmarkdown,
     roxygen2,
     testthat,
-    tidyverse
+    tidyverse,
+    viridis
 Remotes:
     steinbaugh/basejump@develop
 biocViews:
