--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,3 +136,4 @@ importFrom(tidyr,expand)
 importFrom(tidyr,unite)
 importFrom(utils,globalVariables)
 importFrom(utils,head)
+importFrom(utils,installed.packages)
