Ensure BiocInstaller is imported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ exportMethods(sampleYAML)
 exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
 import(methods)
+importFrom(BiocInstaller,biocLite)
 importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
