--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,7 @@ Depends:
 Imports:
     basejump (>= 0.1.11),
     BiocGenerics (>= 0.22.1),
+    BiocInstaller,
     Biostrings,
     dplyr (>= 0.7.4),
     magrittr (>= 1.5),
