--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: bcbioBase
 Title: bcbio Base Functions
 Description: Base functions and generics for bcbio R packages.
-Version: 0.0.3
+Version: 0.0.4
 Authors@R: c(
     person(given = "Michael",
            family = "Steinbaugh",
@@ -24,6 +24,7 @@ Imports:
     dplyr (>= 0.7.4),
     magrittr (>= 1.5),
     methods,
+    rdrop2 (>= 0.8.1),
     readr (>= 1.1.1),
     rlang (>= 0.1.6),
     S4Vectors (>= 0.14.7),
