--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(camel)
 export(checkAnnotable)
 export(checkGene2symbol)
 export(checkInterestingGroups)
+export(copyToDropbox)
 export(detectOrganism)
 export(dynamicPlotlist)
 export(fixNA)
@@ -118,6 +119,11 @@ importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_rownames)
+importFrom(rdrop2,drop_auth)
+importFrom(rdrop2,drop_delete)
+importFrom(rdrop2,drop_exists)
+importFrom(rdrop2,drop_share)
+importFrom(rdrop2,drop_upload)
 importFrom(readr,read_csv)
 importFrom(readr,read_lines)
 importFrom(rlang,"!!!")
