--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ warnings_are_errors: false
 # Temporarily enable to cache R packages
 # script: true
 
+before_install:
+- openssl aes-256-cbc -K $encrypted_548ab35dca07_key -iv $encrypted_548ab35dca07_iv -in tests/testthat/token.rds.enc -out tests/testthat/token.rds -d
+
 r:
   - bioc-release
   # - bioc-devel
