Finalize working example and unit test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_rownames)
 importFrom(rdrop2,drop_auth)
+importFrom(rdrop2,drop_create)
 importFrom(rdrop2,drop_delete)
 importFrom(rdrop2,drop_exists)
 importFrom(rdrop2,drop_share)
