--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ warnings_are_errors: false
 # script: true
 
 before_install:
-- openssl aes-256-cbc -K $encrypted_548ab35dca07_key -iv $encrypted_548ab35dca07_iv -in tests/testthat/token.rds.enc -out tests/testthat/token.rds -d
+- openssl aes-256-cbc -K $encrypted_548ab35dca07_key -iv $encrypted_548ab35dca07_iv -in inst/token.rds.enc -out inst/token.rds -d
 
 r:
   - bioc-release
