Prevent writes to shared directories using `copyToDropbox()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -129,6 +129,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_rownames)
+importFrom(rdrop2,drop_acc)
 importFrom(rdrop2,drop_auth)
 importFrom(rdrop2,drop_create)
 importFrom(rdrop2,drop_delete)
