Fix rdrop2 import and warn instead of abort on shared directory writes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ importFrom(rdrop2,drop_auth)
 importFrom(rdrop2,drop_create)
 importFrom(rdrop2,drop_delete)
 importFrom(rdrop2,drop_exists)
+importFrom(rdrop2,drop_get_metadata)
 importFrom(rdrop2,drop_share)
 importFrom(rdrop2,drop_upload)
 importFrom(readr,read_csv)
