--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,15 @@ importFrom(Biostrings,reverseComplement)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(assertive,assert_all_are_existing_files)
+importFrom(assertive,assert_are_intersecting_sets)
+importFrom(assertive,assert_has_colnames)
+importFrom(assertive,assert_has_dimnames)
+importFrom(assertive,assert_is_a_string)
+importFrom(assertive,assert_is_any_of)
+importFrom(assertive,assert_is_identical_to_na)
+importFrom(assertive,assert_is_list)
+importFrom(assertive,assert_is_subset)
 importFrom(basejump,camel)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,readFileByExtension)
