--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,37 +4,62 @@ export("%>%")
 export("bcbio<-")
 export("interestingGroups<-")
 export(DataFrame)
+export(aggregateReplicates)
+export(annotable)
+export(assignAndSaveData)
 export(bcbio)
+export(camel)
+export(checkAnnotable)
+export(checkGene2symbol)
 export(checkInterestingGroups)
+export(checkTx2gene)
 export(copyToDropbox)
+export(detectOrganism)
+export(dynamicPlotlist)
+export(fixNA)
 export(flatFiles)
+export(gene2symbol)
+export(gene2symbolFromGTF)
 export(glimpse)
 export(interestingGroups)
+export(loadData)
+export(loadDataAsName)
+export(loadRemoteData)
+export(markdownHeader)
+export(markdownList)
+export(mdHeader)
+export(mdList)
 export(metadata)
 export(metrics)
+export(midnightTheme)
 export(plotDot)
 export(plotGene)
+export(plotHeatmap)
 export(plotQC)
+export(plotQuantileHeatmap)
 export(plotViolin)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
 export(readDataVersions)
-export(readLogFile)
-export(readProgramVersions)
+export(readFileByExtension)
+export(readGTF)
 export(readSampleMetadataFile)
+export(readYAML)
 export(sampleMetadata)
 export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
+export(sanitizeAnnotable)
+export(saveData)
 export(selectSamples)
+export(snake)
 export(tpm)
+export(tx2gene)
+export(tx2geneFromGTF)
 export(uniteInterestingGroups)
+export(writeCounts)
 exportMethods(prepareSummarizedExperiment)
 exportMethods(prepareTemplate)
-exportMethods(readDataVersions)
-exportMethods(readLogFile)
-exportMethods(readProgramVersions)
-exportMethods(readSampleMetadataFile)
 exportMethods(sampleYAML)
 exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
@@ -47,15 +72,48 @@ importFrom(assertive,assert_all_are_existing_files)
 importFrom(assertive,assert_are_intersecting_sets)
 importFrom(assertive,assert_has_colnames)
 importFrom(assertive,assert_has_dimnames)
+importFrom(assertive,assert_has_no_duplicates)
+importFrom(assertive,assert_is_a_bool)
 importFrom(assertive,assert_is_a_string)
 importFrom(assertive,assert_is_any_of)
+importFrom(assertive,assert_is_character)
 importFrom(assertive,assert_is_identical_to_na)
+importFrom(assertive,assert_is_integer)
 importFrom(assertive,assert_is_list)
 importFrom(assertive,assert_is_subset)
+importFrom(basejump,aggregateReplicates)
+importFrom(basejump,annotable)
+importFrom(basejump,assignAndSaveData)
 importFrom(basejump,camel)
+importFrom(basejump,checkAnnotable)
+importFrom(basejump,checkGene2symbol)
+importFrom(basejump,checkTx2gene)
+importFrom(basejump,detectOrganism)
+importFrom(basejump,dynamicPlotlist)
+importFrom(basejump,fixNA)
+importFrom(basejump,gene2symbol)
+importFrom(basejump,gene2symbolFromGTF)
+importFrom(basejump,loadData)
+importFrom(basejump,loadDataAsName)
+importFrom(basejump,loadRemoteData)
 importFrom(basejump,localOrRemoteFile)
+importFrom(basejump,markdownHeader)
+importFrom(basejump,markdownList)
+importFrom(basejump,mdHeader)
+importFrom(basejump,mdList)
+importFrom(basejump,midnightTheme)
+importFrom(basejump,plotHeatmap)
+importFrom(basejump,plotQuantileHeatmap)
 importFrom(basejump,readFileByExtension)
+importFrom(basejump,readGTF)
+importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
+importFrom(basejump,sanitizeAnnotable)
+importFrom(basejump,saveData)
+importFrom(basejump,snake)
+importFrom(basejump,tx2gene)
+importFrom(basejump,tx2geneFromGTF)
+importFrom(basejump,writeCounts)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
@@ -81,6 +139,7 @@ importFrom(readr,read_csv)
 importFrom(readr,read_lines)
 importFrom(scales,percent)
 importFrom(stringr,str_pad)
+importFrom(tibble,as_tibble)
 importFrom(tibble,glimpse)
 importFrom(tibble,has_rownames)
 importFrom(tidyr,expand)
