Add back rlang imports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,14 @@ importFrom(rdrop2,drop_share)
 importFrom(rdrop2,drop_upload)
 importFrom(readr,read_csv)
 importFrom(readr,read_lines)
+importFrom(rlang,"!!!")
+importFrom(rlang,"!!")
+importFrom(rlang,.data)
+importFrom(rlang,abort)
+importFrom(rlang,inform)
+importFrom(rlang,sym)
+importFrom(rlang,syms)
+importFrom(rlang,warn)
 importFrom(scales,percent)
 importFrom(stringr,str_pad)
 importFrom(tibble,as_tibble)
