Convert `read*()` functions from S4 to standard

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(plotQuantileHeatmap)
 export(plotViolin)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
+export(pull)
 export(readDataVersions)
 export(readFileByExtension)
 export(readGTF)
@@ -80,6 +81,7 @@ importFrom(assertive,assert_is_character)
 importFrom(assertive,assert_is_identical_to_na)
 importFrom(assertive,assert_is_integer)
 importFrom(assertive,assert_is_list)
+importFrom(assertive,assert_is_non_empty)
 importFrom(assertive,assert_is_subset)
 importFrom(basejump,aggregateReplicates)
 importFrom(basejump,annotable)
@@ -122,6 +124,7 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_if)
+importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
