Update basejump exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(checkAnnotable)
 export(checkGene2symbol)
 export(checkInterestingGroups)
 export(checkTx2gene)
+export(convertGenesToSymbols)
+export(convertTranscriptsToGenes)
 export(copyToDropbox)
 export(detectOrganism)
 export(dynamicPlotlist)
@@ -90,6 +92,8 @@ importFrom(basejump,camel)
 importFrom(basejump,checkAnnotable)
 importFrom(basejump,checkGene2symbol)
 importFrom(basejump,checkTx2gene)
+importFrom(basejump,convertGenesToSymbols)
+importFrom(basejump,convertTranscriptsToGenes)
 importFrom(basejump,detectOrganism)
 importFrom(basejump,dynamicPlotlist)
 importFrom(basejump,fixNA)
