--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,10 +72,12 @@ importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(assertive,assert_all_are_existing_files)
+importFrom(assertive,assert_are_identical)
 importFrom(assertive,assert_are_intersecting_sets)
 importFrom(assertive,assert_has_colnames)
 importFrom(assertive,assert_has_dimnames)
 importFrom(assertive,assert_has_no_duplicates)
+importFrom(assertive,assert_has_rownames)
 importFrom(assertive,assert_is_a_bool)
 importFrom(assertive,assert_is_a_string)
 importFrom(assertive,assert_is_any_of)
