--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(assertive,assert_all_are_existing_files)
+importFrom(assertive,assert_are_disjoint_sets)
 importFrom(assertive,assert_are_identical)
 importFrom(assertive,assert_are_intersecting_sets)
 importFrom(assertive,assert_has_colnames)
