--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,8 @@ export(pull)
 export(readDataVersions)
 export(readFileByExtension)
 export(readGTF)
+export(readLogFile)
+export(readProgramVersions)
 export(readSampleMetadataFile)
 export(readYAML)
 export(sampleMetadata)
