--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(assertive,assert_all_are_existing_files)
+importFrom(assertive,assert_all_are_non_missing_nor_empty_character)
 importFrom(assertive,assert_are_disjoint_sets)
 importFrom(assertive,assert_are_identical)
 importFrom(assertive,assert_are_intersecting_sets)
