--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ importFrom(assertive,assert_is_integer)
 importFrom(assertive,assert_is_list)
 importFrom(assertive,assert_is_non_empty)
 importFrom(assertive,assert_is_subset)
+importFrom(assertive,assert_is_tbl)
 importFrom(basejump,aggregateReplicates)
 importFrom(basejump,annotable)
 importFrom(basejump,assignAndSaveData)
