Fix camel casing on names

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ export(sanitizeAnnotable)
 export(saveData)
 export(selectSamples)
 export(snake)
+export(tibble)
 export(tpm)
 export(tx2gene)
 export(tx2geneFromGTF)
@@ -74,12 +75,14 @@ importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(assertive,assert_all_are_existing_files)
+importFrom(assertive,assert_all_are_in_range)
 importFrom(assertive,assert_all_are_non_missing_nor_empty_character)
 importFrom(assertive,assert_are_disjoint_sets)
 importFrom(assertive,assert_are_identical)
 importFrom(assertive,assert_are_intersecting_sets)
 importFrom(assertive,assert_has_colnames)
 importFrom(assertive,assert_has_dimnames)
+importFrom(assertive,assert_has_names)
 importFrom(assertive,assert_has_no_duplicates)
 importFrom(assertive,assert_has_rownames)
 importFrom(assertive,assert_is_a_bool)
@@ -164,6 +167,7 @@ importFrom(stringr,str_pad)
 importFrom(tibble,as_tibble)
 importFrom(tibble,glimpse)
 importFrom(tibble,has_rownames)
+importFrom(tibble,tibble)
 importFrom(tidyr,expand)
 importFrom(tidyr,unite)
 importFrom(utils,globalVariables)
