Deprecate `checkInterestingGroups()` in favor of `assert_formal_interesting_groups()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export("bcbio<-")
 export("interestingGroups<-")
 export(DataFrame)
+export(assert_formal_interesting_groups)
 export(bcbio)
 export(checkInterestingGroups)
 export(copyToDropbox)
