Reexport `readYAML()` to fix unit test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(readDataVersions)
 export(readLogFile)
 export(readProgramVersions)
 export(readSampleMetadataFile)
+export(readYAML)
 export(sampleMetadata)
 export(sampleYAML)
 export(sampleYAMLMetadata)
@@ -66,6 +67,7 @@ importFrom(assertive,assert_is_tbl)
 importFrom(basejump,camel)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,readFileByExtension)
+importFrom(basejump,readYAML)
 importFrom(basejump,removeNA)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
