--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export("sampleMetadata<-")
 export(DataFrame)
 export(aggregateReplicates)
 export(annotable)
+export(assertFormalInterestingGroups)
 export(assert_formal_interesting_groups)
 export(assignAndSaveData)
 export(bcbio)
