--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,10 +26,10 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: TRUE
 Depends:
-    R (>= 3.4.0)
+    R (>= 3.4.0),
+    basejump (>= 0.3.1)
 Imports:
     assertive (>= 0.3.0),
-    basejump (>= 0.3.1),
     Biostrings,
     dplyr (>= 0.7.4),
     magrittr (>= 1.5),
