--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,6 +80,9 @@ importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
+importFrom(fs,file_copy)
+importFrom(fs,file_exists)
+importFrom(fs,path)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_rownames)
 importFrom(rdrop2,drop_acc)
