Update reexports for unit tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,11 +9,13 @@ export(assertFormalInterestingGroups)
 export(bcbio)
 export(checkInterestingGroups)
 export(copyToDropbox)
+export(file_exists)
 export(flatFiles)
 export(glimpse)
 export(interestingGroups)
 export(metadata)
 export(metrics)
+export(path)
 export(plotDot)
 export(plotGene)
 export(plotQC)
