Use fs methods internally for better compatibility with Windows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(assertFormalInterestingGroups)
 export(bcbio)
 export(checkInterestingGroups)
 export(copyToDropbox)
+export(file_delete)
 export(file_exists)
 export(flatFiles)
 export(glimpse)
@@ -66,6 +67,7 @@ importFrom(assertive,assert_is_list)
 importFrom(assertive,assert_is_non_empty)
 importFrom(assertive,assert_is_subset)
 importFrom(assertive,assert_is_tbl)
+importFrom(basejump,assertIsAStringOrNULL)
 importFrom(basejump,camel)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,readFileByExtension)
@@ -83,6 +85,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
 importFrom(fs,file_copy)
+importFrom(fs,file_delete)
 importFrom(fs,file_exists)
 importFrom(fs,path)
 importFrom(magrittr,"%>%")
