Use `path_real()` instead of `getwd()` for slotting working directory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -88,6 +88,7 @@ importFrom(fs,file_copy)
 importFrom(fs,file_delete)
 importFrom(fs,file_exists)
 importFrom(fs,path)
+importFrom(fs,path_real)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_rownames)
 importFrom(rdrop2,drop_acc)
