--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,6 +40,7 @@ Imports:
     rlang (>= 0.1.2),
     S4Vectors (>= 0.14.7),
     scales,
+    sessioninfo (>= 1.0.0),
     stringr (>= 1.2.0),
     SummarizedExperiment (>= 1.6.5),
     tibble (>= 1.4.1),
@@ -47,7 +48,6 @@ Imports:
     utils
 Suggests:
     BiocStyle,
-    devtools,
     lintr,
     rmarkdown,
     roxygen2,
