--- a/NAMESPACE
+++ b/NAMESPACE
@@ -110,6 +110,7 @@ importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(rlang,warn)
 importFrom(scales,percent)
+importFrom(sessioninfo,session_info)
 importFrom(stringr,str_pad)
 importFrom(tibble,as_tibble)
 importFrom(tibble,glimpse)
