Revert to keeping both session informations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,3 +120,4 @@ importFrom(tidyr,expand)
 importFrom(tidyr,unite)
 importFrom(utils,globalVariables)
 importFrom(utils,head)
+importFrom(utils,sessionInfo)
