Run CI checks against develop version of basejump

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ r_packages:
   - rlang
 r_github_packages:
   - karthik/rdrop2
+  - steinbaugh/basejump@develop
 
 after_success:
   - Rscript -e 'covr::codecov()'
