--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,6 +18,7 @@ cache:
 build_script:
   - travis-tool.sh bioc_install GenomeInfoDbData
   - travis-tool.sh install_deps
+  - travis-tool.sh install_github steinbaugh/basejump@develop
 
 test_script:
   - travis-tool.sh run_tests
