Update pkgdown YAML

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -4,5 +4,7 @@ template:
 authors:
   Michael Steinbaugh:
     href: http://steinbaugh.com
+  Rory Kirchner:
+    href: https://github.com/roryk
   Harvard Chan Bioinformatics Core:
     href: http://bioinformatics.sph.harvard.edu
