Add support for returning RangedSummarizedExperiment with rowData input as GRanges

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ importFrom(basejump,camel)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,removeNA)
+importFrom(basejump,sanitizeColData)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
