--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,11 @@ exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
 import(methods)
 importFrom(Biostrings,reverseComplement)
+importFrom(GenomeInfoDb,seqnames)
+importFrom(GenomicRanges,GRanges)
+importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(assertive,assert_all_are_existing_files)
