--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,6 +33,8 @@ Imports:
     Biostrings,
     dplyr (>= 0.7.4),
     fs (>= 1.0.0),
+    GenomeInfoDb,
+    GenomicRanges,
     magrittr (>= 1.5),
     methods,
     rdrop2 (>= 0.8.1),
@@ -43,6 +45,7 @@ Imports:
     sessioninfo (>= 1.0.0),
     stringr (>= 1.2.0),
     SummarizedExperiment (>= 1.6.5),
+    S4Vectors,
     tibble (>= 1.4.1),
     tidyr (>= 0.7.1),
     utils
