--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,10 @@ export(selectSamples)
 export(tibble)
 export(tpm)
 export(uniteInterestingGroups)
+exportMethods("sampleData<-")
 exportMethods(prepareSummarizedExperiment)
 exportMethods(prepareTemplate)
+exportMethods(sampleData)
 exportMethods(sampleYAML)
 exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
@@ -51,7 +53,9 @@ importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
+importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(SummarizedExperiment,colData)
 importFrom(assertive,assert_all_are_existing_files)
 importFrom(assertive,assert_all_are_in_range)
 importFrom(assertive,assert_all_are_non_missing_nor_empty_character)
