--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("%>%")
 export("bcbio<-")
+export("featureData<-")
 export("interestingGroups<-")
 export("sampleData<-")
 export("sampleMetadata<-")
@@ -10,6 +11,7 @@ export(assertFormalInterestingGroups)
 export(bcbio)
 export(checkInterestingGroups)
 export(copyToDropbox)
+export(featureData)
 export(file_delete)
 export(file_exists)
 export(flatFiles)
@@ -38,7 +40,9 @@ export(selectSamples)
 export(tibble)
 export(tpm)
 export(uniteInterestingGroups)
+exportMethods("featureData<-")
 exportMethods("sampleData<-")
+exportMethods(featureData)
 exportMethods(prepareSummarizedExperiment)
 exportMethods(prepareTemplate)
 exportMethods(sampleData)
@@ -54,8 +58,10 @@ importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,"colData<-")
+importFrom(SummarizedExperiment,"rowData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,colData)
+importFrom(SummarizedExperiment,rowData)
 importFrom(assertive,assert_all_are_existing_files)
 importFrom(assertive,assert_all_are_in_range)
 importFrom(assertive,assert_all_are_non_missing_nor_empty_character)
@@ -83,6 +89,7 @@ importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,removeNA)
 importFrom(basejump,sanitizeColData)
+importFrom(basejump,sanitizeRowData)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
