--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@
 # https://docs.travis-ci.com/user/languages/r
 
 language: r
-sudo: false
 cache: packages
-warnings_are_errors: false
+warnings_are_errors: true
 
 # Temporarily enable to cache R packages
 # script: true
@@ -14,9 +13,13 @@ before_install:
 
 r:
   - bioc-release
-  # - bioc-devel
+  - bioc-devel
+
 r_packages:
   - covr
+bioc_packages:
+  - BiocCheck
 
 after_success:
   - Rscript -e 'covr::codecov()'
+  - R CMD BiocCheck .
