Initial commit of `sampleDirs()` utility function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(readLogFile)
 export(readProgramVersions)
 export(readSampleMetadataFile)
 export(sampleData)
+export(sampleDirs)
 export(sampleMetadata)
 export(sampleYAML)
 export(sampleYAMLMetadata)
