Simplify `sampleDirs()` detection, to work with both bcbioRNASeq and bcbioSingleCell

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,colData)
+importFrom(assertive,assert_all_are_dirs)
 importFrom(assertive,assert_all_are_existing_files)
 importFrom(assertive,assert_all_are_in_range)
 importFrom(assertive,assert_all_are_non_missing_nor_empty_character)
