Add method support for `flatFiles()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(tibble)
 export(tpm)
 export(uniteInterestingGroups)
 exportMethods("sampleData<-")
+exportMethods(flatFiles)
 exportMethods(prepareSummarizedExperiment)
 exportMethods(prepareTemplate)
 exportMethods(sampleData)
