Improve SummarizedExperiment methods for `flatFiles()` and `gene2symbol()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(tpm)
 export(uniteInterestingGroups)
 exportMethods("sampleData<-")
 exportMethods(flatFiles)
+exportMethods(gene2symbol)
 exportMethods(prepareSummarizedExperiment)
 exportMethods(prepareTemplate)
 exportMethods(sampleData)
@@ -79,6 +80,7 @@ importFrom(assertive,assert_is_subset)
 importFrom(assertive,assert_is_tbl)
 importFrom(basejump,assertIsAStringOrNULL)
 importFrom(basejump,camel)
+importFrom(basejump,gene2symbol)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,removeNA)
