Export `projectDirPattern` for grep matching

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plotQC)
 export(plotViolin)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
+export(projectDirPattern)
 export(pull)
 export(readDataVersions)
 export(readLogFile)
@@ -36,9 +37,11 @@ export(selectSamples)
 export(tibble)
 export(tpm)
 export(uniteInterestingGroups)
+exportMethods("interestingGroups<-")
 exportMethods("sampleData<-")
 exportMethods(flatFiles)
 exportMethods(gene2symbol)
+exportMethods(interestingGroups)
 exportMethods(prepareSummarizedExperiment)
 exportMethods(prepareTemplate)
 exportMethods(sampleData)
