Improve handling for NA rows

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,colData)
+importFrom(SummarizedExperiment,rowData)
 importFrom(assertive,assert_all_are_dirs)
 importFrom(assertive,assert_all_are_existing_files)
 importFrom(assertive,assert_all_are_in_range)
