--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export("interestingGroups<-")
 export("sampleData<-")
 export("sampleMetadata<-")
 export(DataFrame)
+export(GRanges)
+export(IRanges)
 export(assertFormalInterestingGroups)
 export(bcbio)
 export(checkInterestingGroups)
@@ -50,6 +52,7 @@ import(methods)
 importFrom(Biostrings,reverseComplement)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
+importFrom(IRanges,IRanges)
 importFrom(S4Vectors,"mcols<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,mcols)
