--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ importFrom(assertive,assert_has_no_duplicates)
 importFrom(assertive,assert_has_rownames)
 importFrom(assertive,assert_is_a_bool)
 importFrom(assertive,assert_is_a_string)
+importFrom(assertive,assert_is_all_of)
 importFrom(assertive,assert_is_any_of)
 importFrom(assertive,assert_is_character)
 importFrom(assertive,assert_is_identical_to_na)
