Fix documentation and NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
 importFrom(S4Vectors,"mcols<-")
+importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
@@ -84,6 +85,7 @@ importFrom(assertive,assert_is_non_empty)
 importFrom(assertive,assert_is_subset)
 importFrom(assertive,assert_is_tbl)
 importFrom(basejump,assertIsAStringOrNULL)
+importFrom(basejump,assertIsGene2symbol)
 importFrom(basejump,camel)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,localOrRemoteFile)
