Improve assert checks and fix automatic subsetting of rowRanges to match assays

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ importFrom(assertive,assert_is_non_empty)
 importFrom(assertive,assert_is_subset)
 importFrom(assertive,assert_is_tbl)
 importFrom(basejump,assertIsAStringOrNULL)
+importFrom(basejump,assertIsCharacterOrNULL)
 importFrom(basejump,assertIsGene2symbol)
 importFrom(basejump,camel)
 importFrom(basejump,gene2symbol)
