--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plotDot)
 export(plotGene)
 export(plotQC)
 export(plotViolin)
+export(prepareSampleMetadata)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
 export(projectDirPattern)
@@ -47,16 +48,12 @@ exportMethods(sampleData)
 exportMethods(sampleYAML)
 exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
+import(S4Vectors)
 import(methods)
 importFrom(Biostrings,reverseComplement)
 importFrom(GenomeInfoDb,seqnames)
 importFrom(GenomicRanges,GRanges)
 importFrom(IRanges,IRanges)
-importFrom(S4Vectors,"mcols<-")
-importFrom(S4Vectors,"metadata<-")
-importFrom(S4Vectors,DataFrame)
-importFrom(S4Vectors,mcols)
-importFrom(S4Vectors,metadata)
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(SummarizedExperiment,colData)
@@ -102,7 +99,6 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_all)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
-importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
 importFrom(magrittr,"%>%")
@@ -132,7 +128,6 @@ importFrom(tibble,as_tibble)
 importFrom(tibble,glimpse)
 importFrom(tibble,has_rownames)
 importFrom(tibble,tibble)
-importFrom(tidyr,expand)
 importFrom(tidyr,unite)
 importFrom(utils,globalVariables)
 importFrom(utils,sessionInfo)
