Deprecate `annotable()` in both bcbioRNASeq and bcbioSingleCell objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(tpm)
 export(uniteInterestingGroups)
 exportMethods("interestingGroups<-")
 exportMethods("sampleData<-")
+exportMethods(annotable)
 exportMethods(flatFiles)
 exportMethods(gene2symbol)
 exportMethods(interestingGroups)
