--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(assertive,assert_is_list)
 importFrom(assertive,assert_is_non_empty)
 importFrom(assertive,assert_is_subset)
 importFrom(assertive,assert_is_tbl)
+importFrom(basejump,annotable)
 importFrom(basejump,assertIsAStringOrNULL)
 importFrom(basejump,assertIsCharacterOrNULL)
 importFrom(basejump,assertIsGene2symbol)
