Use tidyr method on tibbles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,8 @@ importFrom(stringr,str_pad)
 importFrom(tibble,as_tibble)
 importFrom(tibble,glimpse)
 importFrom(tibble,has_rownames)
+importFrom(tibble,is_tibble)
 importFrom(tibble,tibble)
+importFrom(tidyr,unite)
 importFrom(utils,globalVariables)
 importFrom(utils,sessionInfo)
