Switch to S4 methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ exportMethods(sampleData)
 exportMethods(sampleYAML)
 exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
+exportMethods(uniteInterestingGroups)
 import(S4Vectors)
 import(methods)
 importFrom(Biostrings,reverseComplement)
