Improve deprecation method for `sampleMetadata()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,11 +42,13 @@ export(tpm)
 export(uniteInterestingGroups)
 exportMethods("interestingGroups<-")
 exportMethods("sampleData<-")
+exportMethods("sampleMetadata<-")
 exportMethods(annotable)
 exportMethods(flatFiles)
 exportMethods(gene2symbol)
 exportMethods(interestingGroups)
 exportMethods(sampleData)
+exportMethods(sampleMetadata)
 exportMethods(sampleYAML)
 exportMethods(sampleYAMLMetadata)
 exportMethods(sampleYAMLMetrics)
