Use `install_bioc` for consistency

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,7 @@ cache:
 # Adapt as necessary starting from here
 
 build_script:
-  - travis-tool.sh bioc_install GenomeInfoDbData
+  - travis-tool.sh install_bioc GenomeInfoDbData
   - travis-tool.sh install_deps
 
 test_script:
