--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,7 +95,7 @@ importFrom(basejump,gene2symbol)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,removeNA)
-importFrom(basejump,sanitizeColData)
+importFrom(basejump,sanitizeSampleData)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
