--- a/NAMESPACE
+++ b/NAMESPACE
@@ -130,6 +130,7 @@ importFrom(rlang,warn)
 importFrom(scales,percent)
 importFrom(sessioninfo,session_info)
 importFrom(stringr,str_pad)
+importFrom(stringr,str_trunc)
 importFrom(tibble,as_tibble)
 importFrom(tibble,glimpse)
 importFrom(tibble,has_rownames)
