Improve internal `sampleData` handling, allowing user to set the `sampleName` on multiplexed data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(plotDot)
 export(plotGene)
 export(plotQC)
 export(plotViolin)
+export(prepareSampleData)
 export(prepareSampleMetadata)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
@@ -88,6 +89,7 @@ importFrom(assertive,assert_is_subset)
 importFrom(assertive,assert_is_tbl)
 importFrom(basejump,annotable)
 importFrom(basejump,assertIsAStringOrNULL)
+importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsCharacterOrNULL)
 importFrom(basejump,assertIsGene2symbol)
 importFrom(basejump,camel)
