--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ importFrom(dplyr,mutate_if)
 importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
+importFrom(knitr,kable)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_rownames)
 importFrom(rdrop2,drop_acc)
