Migrate to quasiquotation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -123,9 +123,9 @@ importFrom(readr,read_csv)
 importFrom(readr,read_lines)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
-importFrom(rlang,.data)
 importFrom(rlang,abort)
 importFrom(rlang,inform)
+importFrom(rlang,quo)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(rlang,warn)
