Use `sym()` and `syms()` when passing character as symbols. `quo()` returns global variable warning with R CMD CHECK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,7 +125,7 @@ importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,abort)
 importFrom(rlang,inform)
-importFrom(rlang,quo)
+importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(rlang,warn)
 importFrom(scales,percent)
