Migrate heatmap functions from basejump

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,12 +37,16 @@ Imports:
     GenomeInfoDb,
     GenomicRanges,
     IRanges,
+    RColorBrewer,
     S4Vectors,
     assertive (>= 0.3),
+    dendsort,
     dplyr (>= 0.7),
+    grDevices,
     knitr,
     magrittr (>= 1.5),
     methods,
+    pheatmap (>= 1.0),
     rdrop2 (>= 0.8),
     readr (>= 1.0),
     rlang (>= 0.1),
