--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ importFrom(SummarizedExperiment,rowData)
 importFrom(assertive,assert_all_are_dirs)
 importFrom(assertive,assert_all_are_existing_files)
 importFrom(assertive,assert_all_are_in_range)
+importFrom(assertive,assert_all_are_matching_regex)
 importFrom(assertive,assert_all_are_non_missing_nor_empty_character)
 importFrom(assertive,assert_are_disjoint_sets)
 importFrom(assertive,assert_are_identical)
