Update exported globals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,9 @@ export(copyToDropbox)
 export(flatFiles)
 export(glimpse)
 export(interestingGroups)
+export(lanePattern)
 export(metadata)
+export(metadataPriorityCols)
 export(metrics)
 export(plotCorrelationHeatmap)
 export(plotDot)
@@ -28,7 +30,7 @@ export(prepareSampleData)
 export(prepareSampleMetadata)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
-export(projectDirPattern)
+export(projectDirectoryPattern)
 export(pull)
 export(readDataVersions)
 export(readLogFile)
@@ -41,9 +43,11 @@ export(sampleYAML)
 export(sampleYAMLMetadata)
 export(sampleYAMLMetrics)
 export(selectSamples)
+export(separatorBar)
 export(tibble)
 export(tpm)
 export(uniteInterestingGroups)
+export(updateMessage)
 exportMethods("interestingGroups<-")
 exportMethods("sampleData<-")
 exportMethods("sampleMetadata<-")
