Keep export as `projectDirPattern`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,7 @@ export(prepareSampleData)
 export(prepareSampleMetadata)
 export(prepareSummarizedExperiment)
 export(prepareTemplate)
-export(projectDirectoryPattern)
+export(projectDirPattern)
 export(pull)
 export(readDataVersions)
 export(readLogFile)
