--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(readDataVersions)
 export(readLogFile)
 export(readProgramVersions)
 export(readSampleMetadataFile)
+export(readTx2gene)
 export(sampleData)
 export(sampleDirs)
 export(sampleMetadata)
@@ -114,6 +115,7 @@ importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsCharacterOrNULL)
 importFrom(basejump,assertIsGene2symbol)
 importFrom(basejump,assertIsHexColorFunctionOrNULL)
+importFrom(basejump,assertIsTx2gene)
 importFrom(basejump,camel)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,localOrRemoteFile)
