Move `gene2symbol()` generic to bcbioBase

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(bcbio)
 export(checkInterestingGroups)
 export(copyToDropbox)
 export(flatFiles)
+export(gene2symbol)
 export(glimpse)
 export(interestingGroups)
 export(lanePattern)
@@ -115,7 +116,6 @@ importFrom(basejump,assertIsCharacterOrNULL)
 importFrom(basejump,assertIsGene2symbol)
 importFrom(basejump,assertIsHexColorFunctionOrNULL)
 importFrom(basejump,camel)
-importFrom(basejump,gene2symbol)
 importFrom(basejump,localOrRemoteFile)
 importFrom(basejump,makeNames)
 importFrom(basejump,readFileByExtension)
