Consistently don't use `*File` in any of the `read*()` functions. Renamed `readLogFile()` and `readSampleMetadataFile()`.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,8 +34,10 @@ export(prepareTemplate)
 export(projectDirPattern)
 export(pull)
 export(readDataVersions)
+export(readLog)
 export(readLogFile)
 export(readProgramVersions)
+export(readSampleData)
 export(readSampleMetadataFile)
 export(readTx2gene)
 export(sampleData)
